--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ body {
 .container {
     display: grid;
     border: 4px solid lightblue;
-    grid-template-columns: 3fr 2fr 2fr 3fr;
+    grid-template-columns: 0fr 0fr 0fr 1fr;
+    grid-template-rows: 0fr 0fr 0fr 1fr;
     background: lightgray;
     width: 100vmax;
     height: 100%;
-    grid-gap: 16px;
+    grid-gap: 5px;
     font-size: 20px;
 }
 
@@ -39,7 +40,7 @@ body {
     justify-items: center;
     align-content: center;
     border: 2px solid white;
-    height: 8rem;
+    height: 20rem;
     width: 100vmax;
     background: blue;
 }
@@ -51,7 +52,7 @@ body {
     padding: 20px;
     margin: 40px;
     height: 15rem;
-    width: 75%;
+    width: 800px;
     justify-items: center;
     align-content: center;
     background: yellow;
@@ -75,7 +76,7 @@ body {
     height: 7rem;
     padding: 4px;
     margin: 10px;
-    width: 200px;
+    width: 100px;
     justify-items: center;
     align-content: center;
     background: rebeccapurple;
@@ -87,7 +88,7 @@ body {
     height: 7rem;
     padding: 4px;
     margin: 4px;
-    width: 150px;
+    width: 100px;
     justify-items: center;
     align-content: center;
     background: purple;
@@ -132,7 +133,7 @@ body {
     display: grid;
     border: 2px solid white;
     height: 7rem;
-    width: 150px;
+    width: 120px;
     padding: 10px;
     margin: 10px;
     justify-items: center;
@@ -140,7 +141,7 @@ body {
     background: darkolivegreen;
 }
 
-.item-11 {
+/* .item-11 {
     display: grid;
     border: 2px solid white;
     height: 7rem;
@@ -149,7 +150,7 @@ body {
     margin: 10px;
     justify-items: center;
     align-content: center;
-}
+} */
 
 .item-12 {
     display: grid;
@@ -201,7 +202,7 @@ body {
     display: grid;
     border: 2px solid white;
     height: 15rem;
-    width: 30rem;
+    width: 20rem;
     padding: 10px;
     margin: 10px;
     justify-items: center;
